[project]
name = "streaming-protocol"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "aiohttp>=3.9",
  "numpy>=1.23",
  "opencv-python>=4.7",
  "pydantic>=2.0",
  "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
